--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="public/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="public/styles/dashboard.css">
     <script src="public/scripts/main.js" defer></script>
-    <title>Dashboard</title>
+
+    <title>DASHBOARD</title>
 </head>
 <body>
-    <h1>Dashboard</h1>
+    <h1>DASHBOARD</h1>
 </body>
 </html>
