--- a/public/views/login.html
+++ b/public/views/login.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="public/styles/main.css">
     <link rel="stylesheet" type="text/css" href="public/styles/login.css">
-    <title>Login page</title>
+    <title>LOGIN</title>
 </head>
 <body>
-    <h1>login</h1>
+    <form>
+        <h1>LOGIN</h1>
+
+        <input type="email" placeholder="Twój email">
+        <input type="password" placeholder="Twoje hasło">
+        <button type="submit">LOGIN</button>
+    </form>
 </body>
 </html>
