--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -3,13 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="public/styles/main.css">
     <link rel="stylesheet" type="text/css" href="public/styles/dashboard.css">
     <script src="public/scripts/main.js" defer></script>
-
     <title>DASHBOARD</title>
 </head>
 <body>
-    <h1>DASHBOARD</h1>
+    <nav>
+        <ul>
+            <li>DASHBOARD</li>
+            <li>USERS</li>
+            <li>REPORTS</li>
+        </ul>
+    </nav>
+    <div class="container">
+        <aside>
+            <p>PODRECZNE MENU</p>
+        </aside>
+        <main>
+            <h1>CARDS</h1>
+            <!-- TODO display list of cards -->
+             <ul>
+                    <?php foreach ($cards as $card): ?>
+                <li class="card">
+                    <a href="<?= $card['href']; ?>">
+                        <img src="<?= $card['imageUrlPath']; ?>" alt="<?= $card['title']; ?>">
+                        <h2><?= $card['title']; ?></h2>
+                        <p><?= $card['subtitle']; ?></p>
+                    </a>
+                </li>
+            <?php endforeach; ?>
+             </ul>
+        </main>
+    </div>
 </body>
 </html>
