--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,7 @@
+:root{
+    --primary-bg-color:#E6E6EF;
+}
+
 h1 {
     color: blue;
     margin: 0px;
@@ -9,6 +13,7 @@ h1 {
 body {
     height: 100vh;
     margin: 0;
+    background-color: var(--primary-bg-color);
 }
 
 nav{
