--- a/public/views/404.html
+++ b/public/views/404.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="public/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="public/styles/404.css">
+    <link rel="stylesheet" type="text/css" href="public/styles/navbar.css">
     <title>404</title>
 </head>
 <body>
-    <h1>404</h1>
+    <nav class="small">
+        <a href="\dashboard">Unihub</a>
+    </nav>
+    <div>
+        <h1>404</h1>
+        <p>Strona nie została znaleziona.</p>
+        <a href="/dashboard">Powrót do strony głownej.</a>
+    </div>  
 </body>
 </html>
