--- a/public/views/login.html
+++ b/public/views/login.html
@@ -8,12 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>LOGIN</title>
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <title>Login</title>
     
 </head>
 <body>
-    <nav class="login">
-        <h1>Unihub</h1>
+    <nav class="small">
+        <a href="\dashboard">Unihub</a>
     </nav>
     <form action="\login" method="POST">
         <?php if(isset($messages)): ?>
