--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -1,3 +1,13 @@
-h1 {
-    color: red;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+
 }
