--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -19,7 +19,7 @@ form {
     margin: 0px auto;
     padding: 40px;
     background-color: #ffffff;
-    box-shadow: 0px 4px 13px 0px rgba(18, 1, 1, 0.25);
+    box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
     gap: 2vh;
@@ -55,7 +55,7 @@ input::placeholder {
     font-size: 14px;
 }
 
-button[type="submit"] {
+button {
     background-color: #4F517D;
     color: white;
     padding: 12px 24px;
@@ -69,7 +69,7 @@ button[type="submit"] {
     margin-top: 10px;
 }
 
-button[type="submit"]:hover {
+button:hover {
     background-color: #373958;
 }
 
