--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,65 +1,19 @@
-:root{
-    --primary-bg-color:#E6E6EF;
-}
-
-h1 {
-    color: blue;
-    margin: 0px;
-    display: flex;
-    flex-direction: column;
-}
-
-
-body {
-    height: 100vh;
+*{
     margin: 0;
-    background-color: var(--primary-bg-color);
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
-nav{
-    background-color: darkorchid;
-    display:flex;
-    justify-content: space-between;
-    padding: 1rem;
+a {
+    color: #184182;
+    text-decoration: none;
+    font-size: 14px;
+    text-align: center;
+    transition: color 0.3s ease;
 }
 
-aside{
-    background-color: gainsboro;
-}
-
-main{
-    background-color: darkkhaki;
-}
-
-.container{
-    background-color: coral;
-    display:grid;
-    grid-template-columns: 20% 80%;
-    height: calc(100vh - 5rem)
-}
-
-body{
-    margin: 0px;
-    height: 100vh;
-}
-
-nav > ul{
-    display:flex;
-    gap:2rem;
-}
-
-@media screen and (max-width: 480px){
-    .container{
-        grid-template-columns: 1fr;
-    }
-    aside {
-        position: fixed;
-        bottom:0;
-        left: 0;
-        right: 0;
-        height: 5rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+a:hover {
+    color: #184182;
+    text-decoration: underline;
 }
