--- a/public/views/register.html
+++ b/public/views/register.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Register</title>
     <link rel="stylesheet" type="text/css" href="public/styles/navbar.css">
     <link rel="stylesheet" type="text/css" href="public/styles/login.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
 </head>
 <body>
-    <nav class="login">
-        <h1>Unihub</h1>
+    <nav class="small">
+        <a href="\dashboard">Unihub</a>
     </nav>
     <form action="\register" method="POST">
         <?php if(isset($messages)): ?>
