przed zmianą plików ze stylami, dodana podstrona z katetgoriami

--- a/public/views/categories.html
+++ b/public/views/categories.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="public/styles/dashboard.css">
+    <link rel="stylesheet" type="text/css" href="public/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="public/styles/categories.css">
     <link rel="stylesheet" type="text/css" href="public/styles/navbar.css">
     <script src="public/scripts/main.js" defer></script>
-    <title>Dashboard</title>
+    <title>Categories</title>
 </head>
 <body>
     <nav>
@@ -18,12 +19,7 @@
         </ul>
     </nav>
     <div class="container">
-        <aside>
-            <p>PODRECZNE MENU</p>
-        </aside>
-        <main>
-            <h1>Sumy</h1>
-        </main>
+        
     </div>
 </body>
 </html>
