--- a/public/views/login.html
+++ b/public/views/login.html
@@ -23,7 +23,7 @@
             </p>
         <?php endif; ?>
         
-        <label for="email">Email</label>
+        <label for="email">E-mail</label>
         <input name="email" type="email" placeholder="Podaj e-mail">
         <label for="password">Hasło</label>
         <input name="password" type="password" placeholder="Podaj hasło">
