--- a/public/views/register.html
+++ b/public/views/register.html
@@ -22,7 +22,7 @@
             </p>
         <?php endif; ?>
 
-        <label for="email">Email</label>
+        <label for="email">E-mail</label>
         <input name="email" type="email" placeholder="Podaj email">
         <label for="password1">Hasło</label>
         <input name="password1" type="password" placeholder="Podaj hasło">
