główne style przełożone do main.css, zmiana głównego układu

--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -7,6 +7,8 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width:90%;
+    margin-top: 2vh;
 }
 
 nav > a {
