--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="public/styles/main.css">
     <link rel="stylesheet" type="text/css" href="public/styles/dashboard.css">
     <link rel="stylesheet" type="text/css" href="public/styles/navbar.css">
     <script src="public/scripts/main.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Dashboard</title>
 </head>
 <body>
@@ -17,7 +21,7 @@
             <li><a href="\account">Profil</a></li>
         </ul>
     </nav>
-    <div class="container">
+    <div class="main-container">
         <aside>
             <p>PODRECZNE MENU</p>
         </aside>
