--- a/public/views/categories.html
+++ b/public/views/categories.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" type="text/css" href="public/styles/categories.css">
     <link rel="stylesheet" type="text/css" href="public/styles/navbar.css">
     <script src="public/scripts/main.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Categories</title>
 </head>
 <body>
@@ -18,8 +21,8 @@
             <li><a href="\account">Profil</a></li>
         </ul>
     </nav>
-    <div class="container">
-        
+    <div class="main-container">
+        <h1>test</h1>
     </div>
 </body>
 </html>
