--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="public/styles/main.css">
     <link rel="stylesheet" type="text/css" href="public/styles/login.css">
     <link rel="stylesheet" type="text/css" href="public/styles/navbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
