--- a/public/views/404.html
+++ b/public/views/404.html
@@ -18,7 +18,7 @@
     <div>
         <h1>404</h1>
         <p>Strona nie została znaleziona.</p>
-        <a href="/dashboard">Powrót do strony głownej.</a>
+        <a href="\dashboard">Powrót do strony głownej.</a>
     </div>  
 </body>
 </html>
