--- a/public/views/categories.html
+++ b/public/views/categories.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="public/styles/main.css">
-    <link rel="stylesheet" type="text/css" href="public/styles/categories.css">
     <link rel="stylesheet" type="text/css" href="public/styles/navbar.css">
     <script src="public/scripts/main.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,6 +22,11 @@
     </nav>
     <div class="main-container">
         <h1>test</h1>
+    </div>
+    <div class="toolbar">
+        <p>Strona główna</p>
+        <p>Kategorie</p>
+        <P>Dodaj coś idk</P>
     </div>
 </body>
 </html>
