--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -70,3 +70,31 @@ button {
 button:hover {
     background-color: #373958;
 }
+
+@media (max-width: 480px) {
+    .main-container{
+        max-width: 480px;
+        width: 100%;
+        height: 86vh;
+        margin: 0;
+    }
+}
+
+@media (min-width: 480px) {
+    .toolbar{
+        visibility: hidden;
+    }
+}
+
+
+.toolbar{
+    background-color: #4F517D;
+    font-family: 'Inconsolata', sans-serif;
+    padding: 10px 20px;
+    box-shadow: 0px 4px 5px 0px rgba(18, 1, 1, 0.20);
+    z-index: 1;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width:100%;
+}
