ciasteczka, account controller nie działa

--- a/public/views/account.html
+++ b/public/views/account.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Dashboard</title>
+    <title>Konto</title>
 </head>
 <body>
     <nav>
@@ -21,12 +21,7 @@
         </ul>
     </nav>
     <div class="main-container">
-        <aside>
-            <p>PODRECZNE MENU</p>
-        </aside>
-        <main>
-            <h1>Sumy</h1>
-        </main>
+        <script>console.log(document.cookie["username"])</script>
     </div>
 </body>
 </html>
