--- a/public/views/categories.html
+++ b/public/views/categories.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Categories</title>
+    <title>Kategorie</title>
 </head>
 <body>
     <nav>
@@ -21,12 +21,12 @@
         </ul>
     </nav>
     <div class="main-container">
-        <h1>test</h1>
-    </div>
-    <div class="toolbar">
-        <p>Strona główna</p>
-        <p>Kategorie</p>
-        <P>Dodaj coś idk</P>
+        <aside>
+            <p>PODRECZNE MENU</p>
+        </aside>
+        <main>
+            <h1>Sumy</h1>
+        </main>
     </div>
 </body>
 </html>
