singleton poprawiony, logout

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -21,12 +21,7 @@
         </ul>
     </nav>
     <div class="main-container">
-        <aside>
-            <p>PODRECZNE MENU</p>
-        </aside>
-        <main>
-            <h1>Sumy</h1>
-        </main>
+        <hr class="dashed">
     </div>
 </body>
 </html>
