--- a/public/views/register.html
+++ b/public/views/register.html
@@ -31,7 +31,7 @@
         <label for="username">Nazwa użytkownika</label>
         <input name="username" type="text" placeholder="Podaj nazwę użytkownika">
 
-        <button type="submit">Stwórz moje konto</button>
+        <button class="submit-btn" type="submit">Stwórz moje konto</button>
         <a href="\login">Masz już konto? Zaloguj się!</a>
     </form>
 
