--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14,11 +14,13 @@ body {
 }
 
 .main-container {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     background-color: white;
     width:90%;
-    margin-bottom: 2vh;
     box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.25);
-    min-height: calc(100vh - 2vh - 2vh - 60px);
+    min-height: calc(100vh - 9vh - 2vh); /*cała strona - 9vh z navbaru -2vh dla dolnego "marginesu"*/
 }
 
 a {
@@ -54,7 +56,7 @@ input::placeholder {
     font-size: 14px;
 }
 
-button {
+button.submit-btn {
     background-color: #4F517D;
     color: white;
     padding: 12px 24px;
@@ -67,7 +69,7 @@ button {
     margin-top: 10px;
 }
 
-button:hover {
+button.submit-btn:hover {
     background-color: #373958;
 }
 
@@ -86,7 +88,6 @@ button:hover {
     }
 }
 
-
 .toolbar{
     background-color: #4F517D;
     font-family: 'Inconsolata', sans-serif;
@@ -97,4 +98,9 @@ button:hover {
     justify-content: space-evenly;
     align-items: center;
     width:100%;
+}
+
+hr.dashed {
+    width: 80%;
+    border-top: 3px dashed #bbb;
 }
