--- a/public/views/account.html
+++ b/public/views/account.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="public/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="public/styles/account.css">
     <link rel="stylesheet" type="text/css" href="public/styles/navbar.css">
     <script src="public/scripts/main.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +22,9 @@
         </ul>
     </nav>
     <div class="main-container">
-        <script>console.log(document.cookie["username"])</script>
+        <form class="footer" action="\logout" method="POST">
+            <button class="logout-btn" type="submit">Wyloguj się</button>
+        </form>
     </div>
 </body>
 </html>
