wstępny element listy na dashboard ze stylowaniem i ikonami

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="public/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="public/styles/dashboard.css">
     <link rel="stylesheet" type="text/css" href="public/styles/navbar.css">
     <script src="public/scripts/main.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +22,59 @@
         </ul>
     </nav>
     <div class="main-container">
-        <hr class="dashed">
+        <h1>TODO</h1>
+        <hr class="divider">
+        <div class="todo-list">
+            <div class="list-item">
+                <img src="public/assets/category.png" class="list-icon" alt="ikona">
+                <div class="content">
+                    <p class="title">huh</p>
+                    <p class="description">test</p>
+                </div>
+                <button class="menu-btn"><img src="public/assets/dots-vertical.png" class="list-icon" alt="ikona"></button>
+            </div>
+            <div class="list-item">
+                <img src="public/assets/category.png" class="list-icon" alt="ikona">
+                <div class="content">
+                    <p class="title">huh</p>
+                    <p class="description">test</p>
+                </div>
+                <button class="menu-btn"><img src="public/assets/dots-vertical.png" class="list-icon" alt="ikona"></button>
+            </div>
+            <div class="list-item">
+                <img src="public/assets/category.png" class="list-icon" alt="ikona">
+                <div class="content">
+                    <p class="title">huh</p>
+                    <p class="description">test</p>
+                </div>
+                <button class="menu-btn"><img src="public/assets/dots-vertical.png" class="list-icon" alt="ikona"></button>
+            </div>
+            <div class="list-item">
+                <img src="public/assets/category.png" class="list-icon" alt="ikona">
+                <div class="content">
+                    <p class="title">huh</p>
+                    <p class="description">test</p>
+                </div>
+                <button class="menu-btn"><img src="public/assets/dots-vertical.png" class="list-icon" alt="ikona"></button>
+            </div>
+            <div class="list-item">
+                <img src="public/assets/category.png" class="list-icon" alt="ikona">
+                <div class="content">
+                    <p class="title">huh</p>
+                    <p class="description">test</p>
+                </div>
+                <button class="menu-btn"><img src="public/assets/dots-vertical.png" class="list-icon" alt="ikona"></button>
+            </div>
+            <div class="list-item">
+                <img src="public/assets/category.png" class="list-icon" alt="ikona">
+                <div class="content">
+                    <p class="title">huh</p>
+                    <p class="description">test</p>
+                </div>
+                <button class="menu-btn"><img src="public/assets/dots-vertical.png" class="list-icon" alt="ikona"></button>
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
