--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -16,9 +16,10 @@ body {
 .main-container {
     display:flex;
     flex-direction: column;
-    align-items: center;
+    gap: 5px;
     background-color: white;
     width:90%;
+    padding: 2vh 20vh;
     box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.25);
     min-height: calc(100vh - 9vh - 2vh); /*cała strona - 9vh z navbaru -2vh dla dolnego "marginesu"*/
 }
@@ -100,7 +101,13 @@ button.submit-btn:hover {
     width:100%;
 }
 
-hr.dashed {
-    width: 80%;
-    border-top: 3px dashed #bbb;
+hr.divider {
+    border-top: 3px solid #CAC4D0;
+    border-radius: 10px;
+}
+
+h1{
+    font-family: 'Inconsolata', sans-serif;
+    color: #4F517D;
+    align-self: flex-start;
 }
