przed próbą zmiany na https

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -19,6 +19,7 @@
             <li><a href="\dashboard">Strona główna</a></li>
             <li><a href="\categories">Kategorie</a></li>
             <li><a href="\account">Profil</a></li>
+            <button class="menu-btn"><img src="public/assets/user-circle.png" class="list-icon" alt="ikona"></button>
         </ul>
     </nav>
     <div class="main-container">
