--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -10,6 +10,7 @@
     align-items: center;
     gap: 20px;
     padding: 8px 20px;
+    box-shadow: 0px 4px 5px 0px rgba(18, 1, 1, 0.20);
 }
 
 .list-icon {
