--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -4,6 +4,7 @@ body{
 
 form {
     max-width: 400px;
+    min-width: 300px;
     width: 90%;
     margin: 0px auto;
     padding: 40px;
@@ -12,6 +13,7 @@ form {
     display: flex;
     flex-direction: column;
     gap: 2vh;
+
 }
 
 label {
