--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -80,25 +80,14 @@ button.submit-btn:hover {
         width: 100%;
         height: 86vh;
         margin: 0;
+        padding: 0;
     }
-}
-
-@media (min-width: 480px) {
-    .toolbar{
-        visibility: hidden;
+    hr.divider{
+        display:none;
     }
-}
-
-.toolbar{
-    background-color: #4F517D;
-    font-family: 'Inconsolata', sans-serif;
-    padding: 10px 20px;
-    box-shadow: 0px 4px 5px 0px rgba(18, 1, 1, 0.20);
-    z-index: 1;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width:100%;
+    h1{
+        align-self: center;
+    }
 }
 
 hr.divider {
@@ -109,5 +98,4 @@ hr.divider {
 h1{
     font-family: 'Inconsolata', sans-serif;
     color: #4F517D;
-    align-self: flex-start;
 }
